# Chatilo

ai-service/: pyproject.toml
ai-service/app/: main.py
ai-service/app/api/routes/: generate.py
ai-service/app/core/: config.py  settings.py
ai-service/app/graph/: chat_graph.py
ai-service/app/llm/: models.py  prompts.py
ai-service/app/schemas/: generate.py
ai-service/app/services/: chat_service.py
api/: README.md  package.json
api/src/: index.ts  server.ts
api/src/clients/: aiClient.ts
api/src/controllers/: chatController.ts
api/src/routes/: chat.ts
api/src/services/: chatService.ts
api/src/types/: interfaces.d.ts
api/src/utils/: http.ts
mobile/: app.json  eas.json  package.json
mobile/src/app/: chat.tsx
mobile/src/components/: ChatInput.tsx  MessageBubble.tsx  index.ts
mobile/src/hooks/: index.ts  useChat.ts
mobile/src/lib/: api.ts  index.ts
mobile/src/types/: types.d.ts
